# P4_classification_rh

./: .gitignore  README.md  pyproject.toml
configs/: config.yaml
notebooks/exploration/: 01_data_exploration.ipynb
src/: __init__.py
src/data/: __init__.py  load_data.py  preprocess.py
src/features/: __init__.py
src/models/: __init__.py  train.py
src/pipelines/: __init__.py
src/utils/: __init__.py  helpers.py
src/visualization/: __init__.py
tests/: __init__.py  conftest.py
tests/unit/: test_data.py
